# Demo

./: readme.txt
CrossPlatform/: CMakeLists.txt  main.cpp
CrossPlatform/cxx11_new_feature/: ObjectCunstructionImprovement.cpp
Windows/: Windows.sln
Windows/ExtraLibsDemo/: ExtraLibsDemo.vcxproj  ExtraLibsDemo.vcxproj.filters  MainExtraLibDemo.cpp  TransparentWindow.h
Windows/ExtraLibsDemo/DUILib/: DUITest.h  MoveWindow.cpp  MoveWindowCorner.xml
Windows/ExtraLibsDemo/libyuv/: Convert.cpp
Windows/WinDemo/: MainWinDemo.cpp  WinDemo.vcxproj  WinDemo.vcxproj.filters
Windows/WinDemo/DesktopCapture/: DesktopCapture.cpp  DesktopCapture.h
Windows/WinDemo/GDI/: MoveWindow.cpp
Windows/WinDemo/ZZUtilityUT/: Process.cpp  TcpIOCPModel.cpp
